Bug 268798 - Plasma pop-up tips and containment of widgets on panel have wrong placement if there's kimpanel added.
Summary: Plasma pop-up tips and containment of widgets on panel have wrong placement i...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-misc (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-18 02:30 UTC by Vladimir Yerilov
Modified: 2011-11-21 22:50 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Fix for BUG 268798, kimpanel's misbehaviour (1.21 KB, patch)
2011-10-24 21:23 UTC, Andrew Fuller
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vladimir Yerilov 2011-03-18 02:30:58 UTC
Version:           unspecified (using KDE 4.6.1) 
OS:                Linux

When I add kimpanel widget to plasma panel all plasma applets' pop-up tips and containment of widgets (like kickoff menu, power management containment, etc) have wrong placemet on the screen. For example, when I click kickoff menu on the bottom panel, it appears not right up the panel, but on the top of the screen. And it concerns all widgets. Having removed kimpanel widget I saw that the behavior of tips etc had changed to normal (it appeared right after the hovered or clicked applet).

Reproducible: Always

Steps to Reproduce:
Just add kimpanel widget on panel and see what's happening with all plasma pop-up tips, kickoff menu and so on.



This bug occurs all plasma themes (Air too).
Comment 1 Vladimir Yerilov 2011-03-18 02:36:07 UTC
BTW, I encountered this bug in Kubuntu 10.10 with KDE 4.5.~ (kimpanel + ibus).
Now I'm using Gentoo with kimpanel + scim and having this trouble too.
Comment 2 Malte Eggers 2011-03-18 14:16:44 UTC
I can confirm this problem. Gentoo, KDE 4.6, kimpanel+scim. Also, when trying to move the kimpanel applet, it goes crazy and jumps left and right of the panel and sometimes even jumps to other panels. Other applets in the same panel will also get hard to handle, but not as hard as the kimpanel one. Btw., the first problem will not occur right away, but after restarting KDE/Plasma.
I would make this bug a major, as it basically renders kimpanel useless, because you can't use the Desktop properly anymore, so you have to use a GTK+-alternative.
Comment 3 Vladimir Yerilov 2011-04-05 02:28:58 UTC
Hi Guys,

Last week I tried Kubuntu Alpha 3. There is the same annoying bug with kimpanel + ibus there.
Comment 4 Julien Humbert 2011-04-11 23:01:57 UTC
*** This bug has been confirmed by popular vote. ***
Comment 5 Andrew Fuller 2011-10-23 23:48:19 UTC
I can confirm this bug on Kubuntu 11.10 running KDE 4.7.1 with kimpanel+ibus.

An additional problem that I suspect is another symptom of the same underlying problem is that with kimpanel loaded dragging applications on the pager widget to move windows between virtual desktops no longer functions.  Removing kimpanel and the pager behaves correctly again.
Comment 6 Andrew Fuller 2011-10-24 21:23:46 UTC
Created attachment 64847 [details]
Fix for BUG 268798, kimpanel's misbehaviour

Attached is a fix for this bug.

kimpanel was attaching a qgraphicsview to the qgraphicsscene that encompasses the entire desktop.  Now it gets its own scene so the geometry doesn't confuse the popup placements (original symptom reported) and the mouse drag events aren't stolen from other plasmoids (pager symptom).

Works For Meβ„’ running on Kubuntu 11.10.
Comment 7 Weng Xuetian 2011-11-04 09:56:57 UTC
http://quickgit.kde.org/?p=kdeplasma-addons.git&a=commit&h=40ac674b5174d7ce8449ddc40b9aa3b54fd80e96

This has pushed to KDE/4.7, can someone help change the status?

For KDE/4.8 I also just introduce rewrittened kimpanel, which also don't have this problem.