Fix kimpanel interference of plasma popups.

BUG: 268798
REVIEW: 103025